Correção dos erros de compilação e de testes